# john-wiki

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: wiki-graph.md  wiki-health.md  wiki-ingest.md  wiki-lint.md  wiki-query.md
raw/articles/: Claude Code 默认给的 effortLevel 是 `medium`.md  Obsidian + LLM Wiki 落地指南：从零搭建你的 AI 知识库.md  claude-code-best-practice：Claude Code 工作流指南.md  karpathy-llm-wiki.md  一键把PDFWordExcel全转成AI最爱的格式.md
tools/: build_graph.py  file_to_md.py  health.py  ingest.py  query.py  youtube2md.py
wiki/: index.md  log.md  overview.md
wiki/concepts/: Agent工作流分工.md  Codex执行偏好.md  Command.md  MCP.md  Skill.md  Subagent.md  effortLevel.md  wikilinks.md  三层架构.md  多源转Markdown.md  持久化Wiki.md  知识复利.md
wiki/entities/: AndrejKarpathy.md  ClaudeCode.md  MarkItDown.md  Obsidian.md
wiki/sources/: claude-code-best-practice-workflow-guide.md  claude-code-effortlevel-medium.md  karpathy-llm-wiki.md  markitdown-convert-documents-to-markdown.md  obsidian-llm-wiki-implementation-guide.md
wiki/syntheses/: karpathy-three-layer-architecture.md  llm-wiki-summary.md
