[project]
name = "llm-wiki"
version = "0.1.0"
description = ""
authors = [
    {name = "john-wiki",email = ""}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "markitdown[all] (>=0.1.5,<0.2.0)",
    "litellm (>=1.83.10,<1.84.0)",
    "networkx (>=3.6.1,<3.7.0)",
    "python-louvain (>=0.16,<0.17)",
    "pymupdf4llm (>=0.0.17)",
    "yt-dlp",
    "youtube-transcript-api",
    "tqdm (>=4.67.3,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
